kubernetes/apps/observability/goldilocks/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  annotations:
    glance/name: "Goldilocks"
    glance/show: "true"
    glance/icon: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/png/goldilocks.png"
    glance/id: "Observability"
spec:
  hostnames: ["goldilocks.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          namespace: observability
          port: 80
